--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -1,3 +1,6 @@
+@import 'bourbon';
+@import 'neat';
+
 body {
     background: #fafafa;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
